--- a/style/index.css
+++ b/style/index.css
@@ -1,3 +1,13 @@
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+h2,
+h4 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+}
+
 * {
   margin: 0;
   padding: 0;
